# AutoCLV

./: .gitignore  AGENTS.md  BUG_PNG_TOKEN_USAGE.md  CLAUDE_DESKTOP_FIX.md  CLAUDE_DESKTOP_MCP_SETUP.md  COMPREHENSIVE_TEST_PROMPT.md  COPY_PASTE_COMPREHENSIVE_TEST.txt  COPY_PASTE_TEST_PROMPT.txt  DEBUG_LLM_SYNTHESIS.txt  DIAGNOSTIC_TEST_RESULTS.md  FINAL_FIX_TEST.txt  FIX_PHASE5_API_KEY.md  MANUAL_TESTING_INSTRUCTIONS.md  MCP_SERVER_QUICKSTART.md  NEXT_STEPS.md  PANDAS_INTEGRATION_PROPOSAL.md  PHASE1_TESTING.md  PHASE3_MANUAL_TEST_PROMPTS.md  PHASE3_PNG_FIX_INSTRUCTIONS.md  PHASE3_QUICK_TEST.txt  PHASE4A_QUICK_REFERENCE.md  PHASE4A_SETUP_COMPLETE.md  PHASE4A_TEST_RESULTS.md  PHASE5_COMPLETE_TEST_WITH_SETUP.txt  PHASE5_COMPLETION_TEST.txt  PHASE_0_COMPLETION.md  PHASE_3_COMPLETION.md  QUICK_PHASE5_RETEST.txt  README-PHASE4B-TESTING.md  README.md  RESUME_PHASE3_PNG_FIX.txt  STDIO_OUTPUT_FIX.md  TEST_PHASE4A_FEATURES.md  TRACK_ASSIGNMENT_AUDIT.md  TRACK_A_PERFORMANCE_ANALYSIS.md  VISUALIZATION_FIX_SUMMARY.md  claude-review.sh  clv_procedure.md  docker-compose.yml  generate_synthetic_test_data.py  (+16 more)
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
analytics/: pyproject.toml
analytics/services/mcp_server/: PHASE5_QUICK_TEST.md  README.md  README_PHASE5.md  TESTING_PHASE5.md  __main__.py  claude_desktop_config.json  instance.py  main.py  observability.py  run_server.py  state.py  test_png_rendering.py
analytics/tests/: test_database_migrations.py
customer_base_audit/: __init__.py  cli.py
customer_base_audit/analyses/: __init__.py  lens1.py  lens2.py  lens3.py  lens4.py  lens5.py
customer_base_audit/foundation/: __init__.py  cohorts.py  customer_contract.py  data_mart.py  rfm.py
customer_base_audit/mcp/: test_formatters_server.py
customer_base_audit/mcp/formatters/: __init__.py  executive_summaries.py  markdown_tables.py  plotly_charts.py
customer_base_audit/models/: __init__.py  bg_nbd.py  clv_calculator.py  gamma_gamma.py  model_prep.py
customer_base_audit/monitoring/: __init__.py  drift.py  exports.py
customer_base_audit/pandas/: __init__.py  _utils.py  lens1.py  lens2.py  rfm.py
customer_base_audit/synthetic/: __init__.py  generator.py  scenarios.py  texas_clv_client.py  validation.py
customer_base_audit/validation/: __init__.py  diagnostics.py  validation.py
docs/: TESTING_WITH_SYNTHETIC_DATA.md  api_reference.md  foundational_data_platform.md  model_validation_guide.md  user_guide.md
docs/issues/: feature_data_generation_testing.md  feature_enablement_operationalization.md  feature_foundational_customer_platform.md  feature_reusable_audit_components.md
examples/: 01_texas_clv_walkthrough.ipynb  02_custom_cohorts.ipynb  03_model_comparison.ipynb  04_monitoring_drift.ipynb  bg_nbd_demo.py  clv_demo.py  clv_scenario_comparison.py  demo_new_features_synthetic_data.py  model_diagnostics_demo.py  validation_framework_demo.py
tests/: test_bg_nbd.py  test_clv_calculator.py  test_cohorts.py  test_customer_foundation.py  test_diagnostics.py  test_gamma_gamma.py  test_integration_five_lenses.py  test_integration_synthetic_pipeline.py  test_lens1.py  test_lens2.py  test_lens3.py  test_lens4.py  test_lens4_synthetic.py  test_lens5.py  test_lens5_synthetic.py  test_mcp_formatters.py  test_model_prep.py  test_pandas_lens1.py  test_pandas_lens2.py  test_pandas_rfm.py  test_performance_analysis.py  test_rfm.py  test_synthetic_data.py  test_validation.py
tests/integration/: __init__.py  test_batch_cli.py  test_clv_pipeline.py  test_drift_detection.py  test_notebooks.py
tests/monitoring/: test_drift.py  test_exports.py
tests/services/mcp_server/: test_format_results_execution.py  test_foundation_tools.py  test_lens_tools.py  test_mcp_basic.py  test_orchestration.py  test_phase4_observability.py  test_phase5_natural_language.py
thoughts/shared/archive/: track-b-enterprise-connectors.md
thoughts/shared/plans/: 2025-10-08-enterprise-clv-implementation.md  2025-10-10-issue-34-35-lens4-lens5-implementation.md  2025-10-10-issue-78-pandas-integration.md  2025-10-13-remaining-work-analysis.md  2025-10-14-agentic-five-lenses-implementation.md  2025-10-16-merged-agentic-visualization-plan.md  2025-10-21-project-completion-plan.md  2025-10-28-issue-122-cache-hit-rate-testing-plan.md
thoughts/shared/research/: 2025-10-07-clv-implementation-plan.md  (+9 more)
(+31 files in other folders)
