[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoclv"
version = "0.1.0"
description = "Customer Lifetime Value (CLV) analytics platform with synthetic data generation"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.1.0,<3.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    "click>=8.1.7,<9.0.0",
    "jinja2>=3.1.2,<4.0.0",
    "plotly>=5.18.0,<6.0.0",
    "pymc-marketing>=0.3.0",
    "pymc>=5.10.0",
    "arviz>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0,<9.0.0",
    "ruff==0.14.0",
]

[tool.pytest.ini_options]
addopts = "--ignore=analytics"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["customer_base_audit*"]
exclude = ["analytics", "analytics.*"]
